<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.BuyProduct">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        android:orientation="vertical">

        <TextView
            android:id="@+id/buyProduct_Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/product_title_txt"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/buyProduct_ImageOrder"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ibytes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/save_btn"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/buyProduct_Price_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/product_price"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buyProduct_Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:text="20 $" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/buyProduct_totalPrice_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"

                android:text="@string/declare_total_price_is_what"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buyProduct_totalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:text="205 $"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/number_of_product"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/buyProduct_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backGroundColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/product_detail"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buyProduct_details"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="start|top"
            android:inputType="text|textMultiLine"
            android:textColor="@color/white" />


    </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buyProduct_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/save_btn"
            android:onClick="SendRequestOrder"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/btn_send_buy_product" />
    </LinearLayout>

</LinearLayout>